syntax = "proto3";


option java_multiple_files = true;
option java_package = "io.rpc.testwa.task";
option java_outer_classname = "TestcaseProto";
option objc_class_prefix = "RLP";

package testcase;

message ProcedureInfoRequest {
    int32 status = 1;
    string value = 2;
    int32 runtime = 3;
    string cpurate = 4;
    string memory = 5;
    string sessionId = 6;
    string deviceId = 7;
    string screenshotPath = 10;
    string description = 11;
    string action = 12;
    string params = 13;
    string scriptId = 14;
    int64 timestamp = 15;
    string logcatFile = 16;
    string userId = 17;
    string executionTaskId = 18;
    string testcaseId = 19;
}


message TestcaseStartMessage {
    string reportDetailId = 1;
    string serial = 2;
    string install = 3;
    string appId = 4;
    repeated string scriptIds = 5;
    int32 frequency = 6;
}


